force-app/main/default/objects/Staff_Role__c/Staff_Role__c.object-meta.xml
<CustomObject>
    <description>Used internally to control staff role display and order.</description>
    <label>Staff Role</label>
    <nameField>
        <label>Staff Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>