force-app/main/default/objects/Staff_Role__c/fields/CF__c.field-meta.xml
<CustomField>
    <fullName>CF__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CF</label>
    <type>Checkbox</type>
</CustomField>