force-app/main/default/objects/Staff_Role__c/fields/Execution_Team__c.field-meta.xml
<CustomField>
    <fullName>Execution_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execution Team</label>
    <type>Checkbox</type>
</CustomField>