force-app/main/default/objects/Staff_Role__c/fields/FAS__c.field-meta.xml
<CustomField>
    <fullName>FAS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Do not change Field Name, only Label at this time.  Changing Field Name may break integrations.</description>
    <label>FVA</label>
    <type>Checkbox</type>
</CustomField>