force-app/main/default/objects/Staff_Role__c/fields/Fin_Only__c.field-meta.xml
<CustomField>
    <fullName>Fin_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available to Financial (FIN) Staff Only</description>
    <label>Fin Only</label>
    <type>Checkbox</type>
</CustomField>