force-app/main/default/objects/Staff_Role__c/fields/FR__c.field-meta.xml
<CustomField>
    <fullName>FR__c</fullName>
    <defaultValue>true</defaultValue>
    <label>FR</label>
    <type>Checkbox</type>
</CustomField>