force-app/main/default/objects/Staff_Role__c/fields/FS__c.field-meta.xml
<CustomField>
    <fullName>FS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS</label>
    <type>Checkbox</type>
</CustomField>