force-app/main/default/objects/Staff_Role__c/fields/Non_Fin_Only__c.field-meta.xml
<CustomField>
    <fullName>Non_Fin_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Available Only to Non-Financial Staff</description>
    <label>Non Fin Only</label>
    <type>Checkbox</type>
</CustomField>