force-app/main/default/objects/Staff_Role__c/fields/Non_Registered_Only__c.field-meta.xml
<CustomField>
    <fullName>Non_Registered_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Staff Role is Available to Only Non Registered Staff</description>
    <label>Non Registered Only</label>
    <type>Checkbox</type>
</CustomField>