force-app/main/default/objects/Staff_Role__c/fields/Registered_Excluded_Job_Codes__c.field-meta.xml
<CustomField>
    <fullName>Registered_Excluded_Job_Codes__c</fullName>
    <description>Define the Job Codes that Bypass the Registered Only Ruleset</description>
    <label>Registered Excluded Job Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5000</fullName>
            </value>
            <value>
                <fullName>5101</fullName>
            </value>
            <value>
                <fullName>5111</fullName>
            </value>
            <value>
                <fullName>5121</fullName>
            </value>
            <value>
                <fullName>5131</fullName>
            </value>
            <value>
                <fullName>5141</fullName>
            </value>
            <value>
                <fullName>5161</fullName>
            </value>
            <value>
                <fullName>5171</fullName>
            </value>
            <value>
                <fullName>5181</fullName>
            </value>
            <value>
                <fullName>5501</fullName>
            </value>
            <value>
                <fullName>5511</fullName>
            </value>
            <value>
                <fullName>5521</fullName>
            </value>
            <value>
                <fullName>5531</fullName>
            </value>
            <value>
                <fullName>5541</fullName>
            </value>
            <value>
                <fullName>5555</fullName>
            </value>
            <value>
                <fullName>5561</fullName>
            </value>
            <value>
                <fullName>5571</fullName>
            </value>
            <value>
                <fullName>5581</fullName>
            </value>
            <value>
                <fullName>5601</fullName>
            </value>
            <value>
                <fullName>5611</fullName>
            </value>
            <value>
                <fullName>5631</fullName>
            </value>
            <value>
                <fullName>5641</fullName>
            </value>
            <value>
                <fullName>5651</fullName>
            </value>
            <value>
                <fullName>5661</fullName>
            </value>
            <value>
                <fullName>5671</fullName>
            </value>
            <value>
                <fullName>5681</fullName>
            </value>
            <value>
                <fullName>5701</fullName>
            </value>
            <value>
                <fullName>5721</fullName>
            </value>
            <value>
                <fullName>5731</fullName>
            </value>
            <value>
                <fullName>5741</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>