force-app/main/default/objects/Staff_Role__c/fields/Registered_Only__c.field-meta.xml
<CustomField>
    <fullName>Registered_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Role is Available for Only Registered Staff</description>
    <label>Registered Only</label>
    <type>Checkbox</type>
</CustomField>