force-app/main/default/objects/Staff_Role__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SC</label>
    <type>Checkbox</type>
</CustomField>